<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
      <item
          android:id="@+id/menu_start"
          android:orderInCategory="100"
          android:title="@string/menu_start"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_info"
          android:orderInCategory="100"
          android:title="@string/menu_info"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_about"
          android:orderInCategory="100"
          android:title="@string/menu_about"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_exit"
          android:orderInCategory="100"
          android:title="@string/menu_exit"
          app:showAsAction="never"/>
</menu>
