<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quiz">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_view"
        android:id="@+id/about_5"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffff0027"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/about_btn" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@drawable/vitality"
        android:layout_below="@+id/imageView6"
        android:layout_toLeftOf="@+id/about_5"
        android:layout_toStartOf="@+id/about_5"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp"
        android:src="@drawable/kate"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_view1"
        android:id="@+id/about_1"
        android:layout_alignTop="@+id/imageView7"
        android:layout_alignRight="@+id/about_5"
        android:layout_alignEnd="@+id/about_5"
        android:textColor="#fffff1d1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_view2"
        android:id="@+id/about_2"
        android:layout_below="@+id/about_1"
        android:layout_toRightOf="@+id/imageView8"
        android:layout_toEndOf="@+id/imageView8"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_view4"
        android:id="@+id/about_4"
        android:layout_alignTop="@+id/imageView8"
        android:layout_alignLeft="@+id/about_2"
        android:layout_alignStart="@+id/about_2"
        android:textColor="#ffffdcd3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_view3"
        android:id="@+id/about_3"
        android:layout_below="@+id/about_2"
        android:layout_alignLeft="@+id/about_2"
        android:layout_alignStart="@+id/about_2"
        android:textColor="#ffffadc9" />


</RelativeLayout>