<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_id"
    android:background="@drawable/background_quiz">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/info_btn"
        android:layout_above="@+id/info2"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_view"
        android:id="@+id/info1"
        android:textColor="#ff2e37ff"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/true_img_button"
        android:layout_above="@+id/imageView4"
        android:layout_toLeftOf="@+id/info2"
        android:layout_toStartOf="@+id/info2"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_true"
        android:id="@+id/info2"
        android:layout_above="@+id/imageView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/info1"
        android:layout_alignStart="@+id/info1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/false_button_img"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_false"
        android:id="@+id/info3"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/info2"
        android:layout_alignStart="@+id/info2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/cheat_button_img"
        android:layout_below="@+id/info3"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_cheat"
        android:id="@+id/info4"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignLeft="@+id/info3"
        android:layout_alignStart="@+id/info3" />

</RelativeLayout>